--- a/react-demo/react-demo/src/css/test.css
+++ b/react-demo/react-demo/src/css/test.css
@@ -1,4 +1,16 @@
-.test{
-    width: 100%;
-    height: 100%;
+html,body,.test{
+    overflow: hidden;
+}
+*{
+    padding: 0;
+    margin: 0;
+}
+#code{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 2.5rem;
 }
